analytics student-details view progress btn issue, qna sticky menu reaonsive, header btn, qna table tooltip alignment

--- a/v2-library/_src/scss/ui-components/_ui-table.scss
+++ b/v2-library/_src/scss/ui-components/_ui-table.scss
@@ -338,7 +338,9 @@ table.tutor-ui-table {
 
 	.td-action-btns {
 		gap: 10px;
-		min-width: 150px;
+		.tutor-btn {
+			white-space: nowrap;
+		}
 		.tutor-form-select-with-icon {
 			margin-right: 10px;
 		}
